Attempt to prevent the table getting too big

--- a/src/styles/stats.css
+++ b/src/styles/stats.css
@@ -1,5 +1,12 @@
+.skill-table {
+  max-width: 100%;
+}
+
 .skill-table td:first-child {
   width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .skill-table .advancement {
